--- a/index.html
+++ b/index.html
@@ -1,227 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Glassmorphic Quiz & Jokes</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet" />
+    <title>Shalu singh| Portfolio & Projects</title>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&family=Quicksand:wght@500&display=swap" rel="stylesheet">
-
-  <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-
-    body {
-      font-family: 'Manrope', sans-serif;
-      background: linear-gradient(120deg, #232526, #414345);
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      padding: 2rem;
-    }
-
-    .container {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 14px;
-      padding: 2rem;
-      text-align: center;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-      backdrop-filter: blur(10px);
-      animation: fadeIn 1s ease;
-    }
-
-    h2 {
-      font-family: 'Quicksand', sans-serif;
-      font-size: 1.8rem;
-      margin-bottom: 1.5rem;
-      color: #ff6f61;
-      text-shadow: 0 0 12px #ff6f61;
-    }
-
-    #question { min-height: 3.5rem; }
-
-    #answers {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 1rem;
-      margin-bottom: 1.5rem;
-    }
-
-    button {
-      cursor: pointer;
-      padding: 0.9rem 1rem;
-      font-size: 1rem;
-      font-weight: bold;
-      border: none;
-      border-radius: 12px;
-      transition: all 0.3s ease-in-out;
-      background: rgba(255, 255, 255, 0.2);
-      color: #fff;
-      box-shadow: 0 6px 15px rgba(255, 111, 97, 0.3);
-      backdrop-filter: blur(5px);
-    }
-
-    button:hover:not(:disabled) {
-      background: #ff6f61;
-      transform: translateY(-3px);
-    }
-
-    button.correct {
-      background: limegreen !important;
-      box-shadow: 0 0 12px limegreen;
-    }
-
-    button.wrong {
-      background: red !important;
-      box-shadow: 0 0 12px red;
-    }
-
-    #quiz-result {
-      font-size: 1.3rem;
-      font-weight: bold;
-      height: 2rem;
-      margin-bottom: 1rem;
-      color: #ff6f61;
-      text-shadow: 0 0 10px #ff6f61;
-    }
-
-    #restart-btn {
-      background: deepskyblue;
-      font-size: 1.1rem;
-      padding: 1rem;
-      border-radius: 12px;
-      display: none;
-      margin: auto;
-    }
-
-    /* Joke Section */
-    .joke {
-      margin-top: 2rem;
-      background: rgba(255, 255, 255, 0.1);
-      padding: 1.5rem;
-      border-radius: 14px;
-      box-shadow: inset 0 0 15px rgba(255, 111, 97, 0.3);
-      backdrop-filter: blur(10px);
-      color: lightcyan;
-      font-style: italic;
-      font-size: 1.1rem;
-      min-height: 3.5rem;
-    }
-
-    .joke button {
-      margin-top: 1rem;
-      width: 100%;
-      background: rgba(255, 255, 255, 0.3);
-      color: #fff;
-      font-weight: bold;
-      font-size: 1rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(255, 111, 97, 0.5);
-      transition: background 0.3s ease;
-    }
-
-    .joke button:hover {
-      background: #ff6f61;
-      box-shadow: 0 6px 25px rgba(255, 111, 97, 0.7);
-      transform: translateY(-2px);
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
+    <nav class="top-nav">
+        <button class="px-4 py-2 font-semibold text-gray-800 bg-gray-200 rounded-lg" onclick="location.href='index.html'">Portfolio</button>
+        <button class="px-4 py-2 font-semibold text-gray-800 hover:bg-gray-200 rounded-lg" onclick="location.href='todo.html'">To-Do</button>
+        <button class="px-4 py-2 font-semibold text-gray-800 hover:bg-gray-200 rounded-lg" onclick="location.href='shop.html'">Shop</button>
+    </nav>
+    <nav class="side-nav">
+        <a href="#" class="side-nav-link active" data-target="about">About</a>
+        <a href="#" class="side-nav-link" data-target="skills">Skills</a>
+        <a href="#" class="side-nav-link" data-target="projects">Projects</a>
+        <a href="#" class="side-nav-link" data-target="contact">Contact Me</a>
+    </nav>
 
-  <div class="container">
-    <h2 id="question">Loading question...</h2>
-    <div id="answers"></div>
-    <div id="quiz-result"></div>
-    <button id="restart-btn" onclick="restartQuiz()">Restart Quiz</button>
+    <main>
+        <section id="about" class="content-section active">
+            <div class="rounded-box about">
+                <h1>Hi, I'm Shalu singh</h1>
+                <p class="subtitle typing">~ Constantly Exploring, Forever Learning, Always Evolving ~</p>
+                <h2>About Me</h2>
+                <hr />
+                <p>
+                    I am a passionate Computer Science and Engineering student dedicated to learning and mastering coding and software development. I actively participate in coursework, personal projects, and online resources to sharpen my programming skills. Leveraging AI tools and the latest technologies, I aim to accelerate my learning process, innovate, and deliver practical solutions. Driven by curiosity and ambition, I continuously seek opportunities to grow professionally and contribute to impactful projects.
+                </p>
+            </div>
+        </section>
 
-    <section class="joke">
-      <h2>Random Joke</h2>
-      <p id="joke-text">Click the button to get a joke.</p>
-      <button onclick="getJoke()">Get Joke</button>
-    </section>
-  </div>
+        <section id="skills" class="content-section">
+            <div class="rounded-box">
+                <h2>Technical Skills</h2>
+                <hr />
+                <ul class="skills-list">
+                    <li>C, C++</li>
+                    <li>Python (Beginner)</li>
+                    <li>HTML, CSS, JavaScript</li>
+                    <li>Canva (Design)</li>
+                    <li>MS Office (Word, Excel)</li>
+                </ul>
+            </div>
+        </section>
 
-  <script>
-    const questions = [
-      { question: "What is the speed of light?", options: { a: "300,000 km/s", b: "150,000 km/s", c: "100,000 km/s" }, correct: "a" },
-      { question: "Which element has the atomic number 1?", options: { a: "Helium", b: "Oxygen", c: "Hydrogen" }, correct: "c" },
-      { question: "What is the hardest natural substance?", options: { a: "Gold", b: "Diamond", c: "Iron" }, correct: "b" }
-    ];
+        <section id="projects" class="content-section">
+            <div class="rounded-box">
+                <h2>Selected Projects</h2>
+                <hr />
+                <div class="project">
+                    <h3>#Joke Generator</h3>
+                    <p>A web application that fetches and displays random jokes from an external API, providing users with fresh humor every time they interact. Developed using HTML, CSS, and JavaScript with a clean, intuitive UI.</p>
+                    <ul>
+                        <li>Integrates with an API to retrieve jokes dynamically.</li>
+                        <li>Simple, user-friendly interface with a refresh button to load new jokes.</li>
+                    </ul>
+                </div>
+                <div class="project">
+                    <h3>#To-Do List App</h3>
+                    <p>An interactive task management app allowing users to add, mark complete, and remove tasks. Designed to be responsive for seamless use across devices. Built using HTML, CSS, and JavaScript.</p>
+                    <ul>
+                        <li>Supports task addition and deletion with click/double-click actions.</li>
+                        <li>Responsive layout utilizing Flexbox for optimal viewing on mobile and desktop.</li>
+                    </ul>
+                </div>
+                <div class="project">
+                    <h3>#Portfolio Website</h3>
+                    <p>My personal website designed to showcase my skills, projects, and provide a contact gateway. Built with modern web standards for responsiveness and accessibility.</p>
+                    <ul>
+                        <li>Clean, modern, and responsive design.</li>
+                        <li>Includes smooth navigation with both top and side menus, plus form validation.</li>
+                    </ul>
+                </div>
+                <div class="project">
+                    <h3>#Product Listing Page</h3>
+                    <p>A dynamic e-commerce style product listing page with advanced sorting and filtering features. Developed using HTML, CSS, and JavaScript to enhance user experience.</p>
+                    <ul>
+                        <li>Allows sorting products by price and rating.</li>
+                        <li>Filters products by category such as electronics and clothing.</li>
+                        <li>Responsive UI with efficient DOM manipulation for seamless updates.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
-    let currentQuestion = 0;
+        <section id="contact" class="content-section">
+            <div class="rounded-box">
+                <h2>Contact Me</h2>
+                <hr />
+                <ul class="skills-list">
+                    <li>Email: <a href="mailto:singhshalu2902@gmail.com">singhshalu2902@gmail.com</a></li>
+                    <li>GitHub: <a href="https://github.com/shalu095" target="_blank" rel="noopener noreferrer">github.com/shalu095</a></li>
+                    <li>LinkedIn: <a href="https://www.linkedin.com/in/shalu-singh-b65615324/" target="_blank" rel="noopener noreferrer">linkedin.com/in/shalu-singh</a></li>
+                </ul>
+            </div>
+        </section>
 
-    function loadQuestion() {
-      const q = questions[currentQuestion];
-      document.getElementById("question").textContent = `${currentQuestion + 1}. ${q.question}`;
-      const answersDiv = document.getElementById("answers");
-      answersDiv.innerHTML = "";
-
-      for (let key in q.options) {
-        const btn = document.createElement("button");
-        btn.textContent = `${key.toUpperCase()}) ${q.options[key]}`;
-        btn.onclick = () => checkAnswer(key, btn);
-        answersDiv.appendChild(btn);
-      }
-
-      document.getElementById("quiz-result").textContent = "";
-      document.getElementById("restart-btn").style.display = "none";
-    }
-
-    function checkAnswer(answer, button) {
-      const q = questions[currentQuestion];
-      const result = document.getElementById("quiz-result");
-      const buttons = document.querySelectorAll("#answers button");
-
-      buttons.forEach(b => b.disabled = true);
-
-      if (answer === q.correct) {
-        result.textContent = "✅ Correct!";
-        button.classList.add("correct");
-      } else {
-        result.textContent = "❌ Incorrect.";
-        button.classList.add("wrong");
-      }
-
-      currentQuestion++;
-
-      setTimeout(() => {
-        if (currentQuestion < questions.length) {
-          loadQuestion();
-        } else {
-          document.getElementById("question").textContent = "🎉 Quiz Complete!";
-          document.getElementById("answers").innerHTML = "";
-          result.textContent = "";
-          document.getElementById("restart-btn").style.display = "block";
-        }
-      }, 1000);
-    }
-
-    function restartQuiz() {
-      currentQuestion = 0;
-      loadQuestion();
-    }
-
-    function getJoke() {
-      fetch("https://official-joke-api.appspot.com/random_joke")
-        .then(response => response.json())
-        .then(data => {
-          document.getElementById("joke-text").textContent =
-            data.setup + " — " + data.punchline;
-        })
-        .catch(() => {
-          document.getElementById("joke-text").textContent = "Failed to load joke.";
-        });
-    }
-
-    window.onload = loadQuestion;
-  </script>
+        <section id="todo" class="content-section">
+            <div class="rounded-box todo-box">
+                <h1>To-Do List</h1>
+                <form id="todo-form">
+                    <input type="text" id="todo-input" placeholder="Add new task..." autocomplete="off" aria-label="Add new task" />
+                    <button type="submit" aria-label="Add task">Add</button>
+                </form>
+                <ul id="todo-list" aria-live="polite" aria-relevant="additions removals"></ul>
+                <p><small><u>Click</u> a task to mark it complete, <u>Double click</u> to remove it.</small></p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Shalu</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
+
 </html>
